--- a/README
+++ b/README
@@ -7,3 +7,7 @@ http://micewww.pp.rl.ac.uk:8080/projects/maus
 2. License
 
 License information can be found in COPYING. Licensing information for libraries distributed with MAUS can be found in third_party/license.
+
+3. IRC channel
+
+Support and developer chat can be had at irc.freenode.net in channel #maus.  This is accessible via: http://webchat.freenode.net.
