--- a/README
+++ b/README
@@ -11,3 +11,7 @@ License information can be found in COPYING. Licensing information for libraries
 3. IRC channel
 
 Support and developer chat can be had at irc.freenode.net in channel #maus.  This is accessible via: http://webchat.freenode.net.
+
+4. Coverity
+
+We thank Coverity for providing static code analysis.
