--- a/AUTHORS
+++ b/AUTHORS
@@ -7,3 +7,4 @@ Matt Robinson <m.robinson@sheffield.ac.uk>
 Christopher Rogers <chris.rogers@stfc.ac.uk> 
 Christopher Tunnell <c.tunnell1@physics.ox.ac.uk>
 Antony Wilson <a.wilson1@physics.ox.ac.uk>
+Vassil Verguilov <vassil.verguilov@cern.ch>
