remove fake beammaker, put author information in AUTHORS instead of doxygen files

--- a/AUTHORS
+++ b/AUTHORS
@@ -8,3 +8,5 @@ Christopher Rogers <chris.rogers@stfc.ac.uk>
 Christopher Tunnell <c.tunnell1@physics.ox.ac.uk>
 Antony Wilson <a.wilson1@physics.ox.ac.uk>
 Vassil Verguilov <vassil.verguilov@cern.ch>
+
+The list of G4MICE developers is elsewhere.
