--- a/bin/README
+++ b/bin/README
@@ -1,11 +1,8 @@
-Please write a comment like the following on each macro with your contact information, a few sentence description of what the macro does, and when you wrote it.
+Please add comments in run()'s docstring that explains what the macro does.  This will help other people who want to use your code.  Here is an example:
 
-# Author: Christopher Tunnell <tunnell@hep.uchicago.edu>
-#
-# This is a script intended to provide summary status information about the
-# CIS system to somebody like the DQ leader.
-#
-# March 05, 2009
-#
+def run(number_of_events):
+    """Simulate the MICE experiment
 
-The only way we'll ever understand what everybody else is doing in Tucs is by at very *least* having this.
+    This will simulate 'number_of_events' MICE events through the entirity
+    of MICE using Geant4.  At present, TOF and Tracker hits will be digitized.
+    """
