add install link

--- a/README
+++ b/README
@@ -4,6 +4,10 @@ Welcome to MAUS (MICE Analysis User Software).  This open-source software projec
 
 http://micewww.pp.rl.ac.uk/projects/maus
 
+where one can look at the installation instructions here:
+
+http://micewww.pp.rl.ac.uk/projects/maus/wiki/Install
+
 2. Citing MAUS
 
 TBD
