--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -5,7 +5,10 @@ http://micewww.pp.rl.ac.uk/projects/maus/roadmap
 Release Notes
 =============
 
-MAUS-0.0.1 summary:
+MAUS-v0.0.2 summary
+- Added BeamMaker prototype
+
+MAUS-v0.0.1 summary:
 - Initial version
 - Core map-reduce infrastructure
 - Partial implementaton of monte carlo tracking simulation at application level
