Add version number

--- a/README
+++ b/README
@@ -1,3 +1,5 @@
+MAUS development version 0.0.3
+
 1.  Introduction
 
 Welcome to MAUS (MICE Analysis User Software).  This open-source software project is hosted at:
