Closes #501 - Fix double pushback. Closes #334 - Fix fake energy deposits.

--- a/AUTHORS
+++ b/AUTHORS
@@ -4,6 +4,7 @@ Timothy Carlisle <t.carlisle1@physics.ox.ac.uk>
 Simon Fayer <simon.fayer05@imperial.ac.uk>
 Matt Robinson <m.robinson@sheffield.ac.uk>
 Christopher Rogers <chris.rogers@stfc.ac.uk> 
+Edward Santos <e.santos10@imperial.ac.uk>
 Christopher Tunnell <c.tunnell1@physics.ox.ac.uk>
 Antony Wilson <a.wilson1@physics.ox.ac.uk>
 Vassil Verguilov <vassil.verguilov@cern.ch>
