--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,36 @@
+MAUS-v0.0.3 (http://micewww.pp.rl.ac.uk/versions/show/9)
+  Bug #328: No page number in MiceMods doc
+	Bug #334: energy deposited when no energy deposited in tracker special detector
+	Bug #388: Mice_Module-2-4-1.pdf does not document Volume Type "Sphere"
+	Bug #434: Root build fails on ubuntu 11.04
+	Bug #436: Missing documentation for mice-2-4-1
+	Bug #452: Flash ADC samples increase datastructure size; slow to write to disk again
+	Bug #468: indents and hardcoded homedir path in src/core/common/check_sync.py
+	Bug #470: unpacker fails with GCC 4.5.2 (or rather modern Ubuntu Linux)
+	Bug #472: MAUSPrimaryGeneratorAction fails to set the time
+	Bug #473: Instability in MAUSSteppingActionTest
+	Bug #501: SciFiSD creates fake hits
+	Bug #502: uint to unsigned int for Mac compatability
+	Bug #516: simulate_mice.py makes spurious mangled mausput.gz
+	Feature #31: Some Code infrastructure questions
+	Feature #302: every process should maybe have a 'key' to split detector/accelerator stuff
+	Feature #347: Split Interface into sub domains
+	Feature #351: RF Cavity phasing
+	Feature #352: Optics code
+	Feature #385: Filter for pylint
+	Feature #418: Convert file endings to cc hh
+	Feature #442: review coverity information
+	Feature #457: Cpp exception interface with python
+	Feature #474: Redo merge of MAUS code and legecay G4MICE code
+	Feature #494: Dead code purge of src/common
+	Feature #495: Disclaimer in src/common area for legacy code
+	Feature #496: Updated directory structure
+	Feature #503: Verbosity datacard
+	Feature #520: Clarify some names: RealData, etc.
+	Support #433: Code review for MiceModuleConfigDB stuff
+	Support #444: "Property momentum not found in Json object lookup"
+	Support #497: Memory allocation failed in MDdateFile
+
 MAUS-v0.0.2 (http://micewww.pp.rl.ac.uk/versions/show/6):
   Bug #437: missing test coverage
   Bug #448: scons does not clean properly some changes
