--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -5,15 +5,19 @@ http://micewww.pp.rl.ac.uk/projects/maus/roadmap
 Release Notes
 =============
 
-MAUS-v0.0.3 summary
+MAUS-v0.0.4
+- Added SpecialVirtual detectors
+- Updated to xboa-0.11.0
+
+MAUS-v0.0.3:
 - Added RF cavity phasing routine
 - Added a test to check for python style
 - Streamlined the routines for handling errors between python and C++
 
-MAUS-v0.0.2 summary
+MAUS-v0.0.2:
 - Added BeamMaker prototype
 
-MAUS-v0.0.1 summary:
+MAUS-v0.0.1:
 - Initial version
 - Core map-reduce infrastructure
 - Partial implementaton of monte carlo tracking simulation at application level
