Add tool for automatically generating documentation from json schema

--- a/doc/doc_tools/spill.tex
+++ b/doc/doc_tools/spill.tex
@@ -1,4 +1,6 @@
-\documentclass[a4paper, 12pt] {report}
+\documentclass[a4paper, 10pt] {report}
+\usepackage{enumitem}
+\setlistdepth{5}
 \begin{document}
 \include{spill_schema} 
 \end{document}
