Bit of polishing

--- a/doc/doc_tools/spill.tex
+++ b/doc/doc_tools/spill.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper, 10pt] {report}
-\usepackage{enumitem}
-\setlistdepth{5}
+%\usepackage{enumitem} latex2html doesnt see this package at all
+%\setlistdepth{5} doesnt seem to work (CTR)
 \begin{document}
 \include{spill_schema} 
 \end{document}
