--- a/README
+++ b/README
@@ -12,7 +12,9 @@ http://micewww.pp.rl.ac.uk/projects/maus/wiki/Install
 
 2. Citing MAUS
 
-TBD
+There is currently only an accelerator physics proceedings that you should use for citations.  Eventually there will be a paper.  For the moment, if you use MAUS for any scientific publication you must cite it as:
+
+C. D. Tunnell and C. T. Rogers, "MAUS: MICE Analysis User Software", IPAC (2011)
 
 3. License
 
