--- a/doc/doc_tools/spill.tex
+++ b/doc/doc_tools/spill.tex
@@ -2,5 +2,6 @@
 %\usepackage{enumitem} latex2html doesnt see this package at all
 %\setlistdepth{5} doesnt seem to work (CTR)
 \begin{document}
+\chapter{Spill data structure}
 \include{spill_schema} 
 \end{document}
