Bit more hacking around with documentation structure

--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -1,6 +1,14 @@
 \documentclass[a4paper, 10pt] {report}
 \begin{document}
 
+\vspace*{2.0cm}
+
+\begin{center}
+\Large{ \bf{MAUS Analysis User System} }
+
+\Large{ \bf{User Guide} }
+\end{center}
+
 \chapter{Running for the First Time}
 \include{first_time_running}
 
@@ -12,7 +20,7 @@
 \include{detectors/kl}
 
 \chapter{Setting up a Geometry}
-\include{geometry_definitions} % 
+\include{geometry_definitions}
 
 \chapter{Appendix A: Run Control Variables}
 \include{run_controls} % automatically constructed by build script
