--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -4,6 +4,14 @@ http://micewww.pp.rl.ac.uk/projects/maus/roadmap
 
 Release Notes
 =============
+MAUS-v0.0.8
+- Merged DAQ unpacking code
+- Refactor of execution framework to prepare for multiprocessing and online
+  reconstruction
+- Documentation skeleton introduced
+- Executable (bin/utilities/json_browser.py) to browse formatted json output in
+  more human readable form 
+
 MAUS-v0.0.7
 - New functions to generate input beam
 -- Multivariate gaussian in x, px, y, py, time, energy
