Updated author list

--- a/AUTHORS
+++ b/AUTHORS
@@ -2,8 +2,12 @@ There are two sets of overlapping authors: MAUS authors and G4MICE authors. This
 
 Timothy Carlisle <t.carlisle1@physics.ox.ac.uk>
 Simon Fayer <simon.fayer05@imperial.ac.uk>
+Chris Heidt <cheid001@ucr.edu>
+Peter Lane <plane1@iit.edu>
+Yordan Karadzhov <yordan@phys.uni-sofia.bg>
+Mike Jackson <michaelj@epcc.ed.ac.uk>
 Matt Robinson <m.robinson@sheffield.ac.uk>
-Christopher Rogers <chris.rogers@stfc.ac.uk> 
+Christopher Rogers <chris.rogers@stfc.ac.uk>
 Edward Santos <e.santos10@imperial.ac.uk>
 Christopher Tunnell <c.tunnell1@physics.ox.ac.uk>
 Antony Wilson <a.wilson1@physics.ox.ac.uk>
