--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,10 @@
+MAUS-v0.1.3 (http://micewww.pp.rl.ac.uk/versions/show/20)
+  Feature #342: scons cleanup
+  Feature #707: PyROOT histogram reducer
+  Feature #864: install_build_test makes only one output file
+  Feature #889: Pylint tests made stricter
+  Feature #893: Add new TOF calibration for December run
+
 MAUS-v0.1.2 (http://micewww.pp.rl.ac.uk/versions/show/19)
   Feature #723: Command line arguements cleanup
   Feature #768: File IO for beam maker
