--- a/RELEASENOTES
+++ b/RELEASENOTES
@@ -4,6 +4,11 @@ http://micewww.pp.rl.ac.uk/projects/maus/roadmap
 
 Release Notes
 =============
+MAUS-v0.1.3
+  The following functionality was added:
+    - A python interface to ROOT for online histogramming has been introduced
+    - TOF calibration for the december run is now available
+
 MAUS-v0.1.2
   The following functionality was added:
     - Input beams can now be read from maus, ICOOL and G4Beamline formatted files
