More documentation edits

--- a/doc/doc_src/maus_user_guide.tex
+++ b/doc/doc_src/maus_user_guide.tex
@@ -12,14 +12,16 @@
 \chapter{Running for the First Time}
 \include{first_time_running}
 
-\chapter{Detector Description}
-\include{detectors/tof}
-\include{detectors/tracker}
-\include{detectors/emr}
-\include{detectors/ckov}
-\include{detectors/kl}
+\include{simulation}
 
-\chapter{Setting up a Geometry}
+\chapter{Detector Description}
+%\include{detectors/tof}
+%\include{detectors/tracker}
+%\include{detectors/emr}
+%\include{detectors/ckov}
+%\include{detectors/kl}
+
+\chapter{Geometry}
 \include{geometry_definitions}
 
 \chapter{Appendix A: Run Control Variables}
